Ticket #10170 (closed defect: fixed)

Opened 22 months ago

Last modified 10 months ago

auidemo crashes when undocking toolbars

Reported by: ksinger Owned by:
Priority: blocker Milestone:
Component: wxAui Version: 2.8.10
Keywords: wxaui blocker Cc: net147@…
Blocked By: Patch: no
Blocking:

Description

error message:
Unhandled exception at 0x006361f4 in MCP2.exe: 0xC0000005: Access violation reading location 0x00000000.

Version: wxMSW-2.8.9 and also 2.9.svn

here is callstack:

MCP2.exe!wxWindowBase::GetPosition() Line 266 + 0xb bytes C++

MCP2.exe!wxAuiManager::OnFloatingPaneMoving(wxWindow * wnd=0x01af7dd8, wxDirection dir=wxUP) Line 3489 C++
MCP2.exe!wxAuiFloatingFrame::OnMoving(const wxRect & formal={...}, wxDirection dir=wxUP) Line 286 C++
MCP2.exe!wxAuiFloatingFrame::OnMoveEvent(wxMoveEvent & event={...}) Line 184 C++
MCP2.exe!wxAppConsole::HandleEvent(wxEvtHandler * handler=0x01b762f0, void (wxEvent &)* func=0x00553ecc, wxEvent & event={...}) Line 323 C++
MCP2.exe!wxEvtHandler::ProcessEventIfMatches(const wxEventTableEntryBase & entry={...}, wxEvtHandler * handler=0x01b762f0, wxEvent & event={...}) Line 1233 C++
MCP2.exe!wxEventHashTable::HandleEvent(wxEvent & event={...}, wxEvtHandler * self=0x01b762f0) Line 907 + 0x1c bytes C++
MCP2.exe!wxEvtHandler::ProcessEvent(wxEvent & event={...}) Line 1293 + 0x1c bytes C++
MCP2.exe!wxEvtHandler::ProcessEvent(wxEvent & event={...}) Line 1300 + 0x1c bytes C++
MCP2.exe!wxWindow::HandleMove(int x=549, int y=183) Line 4791 + 0x1c bytes C++
MCP2.exe!wxWindow::MSWWindowProc(unsigned int message=3, unsigned int wParam=0, long lParam=11993637) Line 2663 + 0x21 bytes C++
MCP2.exe!wxTopLevelWindowMSW::MSWWindowProc(unsigned int message=3, unsigned int wParam=0, long lParam=11993637) Line 372 + 0x14 bytes C++
MCP2.exe!wxFrame::MSWWindowProc(unsigned int message=3, unsigned int wParam=0, long lParam=11993637) Line 1101 + 0x14 bytes C++
MCP2.exe!wxWndProc(HWND
* hWnd=0x00070cb0, unsigned int message=3, unsigned int wParam=0, long lParam=11993637) Line 2613 + 0x1c bytes C++

error occurs in file wx\window.h

wxPoint GetPosition() const

{

int x, y;
DoGetPosition(&x, &y);//<<here we crash

return wxPoint(x, y);

}

Attachments

MCP2 - Kopie.rar download (58.6 KB) - added by ksinger 22 months ago.
msvc2005 and 2008 project

Change History

Changed 22 months ago by ksinger

os: windows vista

Changed 22 months ago by ksinger

msvc2005 and 2008 project

Changed 13 months ago by net147

  • cc net147@… added

From what I can tell, r59107 should have fixed this already and this ticket can be closed.
This seems to be same issue as #10371 which has already been fixed.

Changed 13 months ago by vadz

  • status changed from new to closed
  • resolution set to fixed

Thanks for your testing, closing it as fixed then -- please reopen if it still happens.

Changed 10 months ago by ollydbg

  • status changed from closed to reopened
  • version changed from 2.8.x to 2.8.10
  • resolution deleted

Hi, it seems in 2.8.10 library, there is still a bug to cause a crash when you drag the toolbar in AUI applications.

To fix the bug, you can simply change the code here:

void wxAuiManager::OnFloatingPaneMoveStart(wxWindow* wnd)
{
    // try to find the pane
    wxAuiPaneInfo& pane = GetPane(wnd);
    wxASSERT_MSG(pane.IsOk(), wxT("Pane window not found"));

   //patch there.
   if(!pane.frame)
        return;
       
    if (m_flags & wxAUI_MGR_TRANSPARENT_DRAG)
        pane.frame->SetTransparent(150);
} 

See the discussing on the codeblocks forum:

 http://forums.codeblocks.org/index.php/topic,10406.msg71815.html#msg71815

and

 http://forums.codeblocks.org/index.php/topic,11504.msg78379.html#msg78379

Thanks.

Changed 10 months ago by BP

  • status changed from reopened to closed
  • resolution set to fixed

(In [62669]) Fix crash when dragging toolbars in wxAuiManager::OnFloatingPaneMoveStart(). (fixes #10170)

Changed 10 months ago by BP

(In [62670]) Backport of r62669 to 2.8 branch. Fix crash when dragging toolbars in wxAuiManager::OnFloatingPaneMoveStart(). (fixes #10170)

Note: See TracTickets for help on using tickets.