Fix crash when dragging toolbars in wxAuiManager::OnFloatingPaneMoveStart(). (fixes #10170)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@62669 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775